# buck-wood

./: .gitignore  41336PublisherName.ExampleGame_1.0.0.0_neutral__dspnxghe87tn0_xs_appxmanifest.xml  63141GnarlyTyke.BuckWood_1.0.0.0_neutral__xccz20fsf89xr_xs_appxmanifest.xml  CMakeLists.txt  SECRET_KEY.lekb  app.cpp  app.h  config.txt  control_state.h  d2d_app.cpp  d2d_app.h  d2d_frame.cpp  d2d_frame.h  d2d_object.cpp  d2d_object.h  game_objects.cpp  game_objects.h  game_state.cpp  game_state.h  gen_pkg.txt  main.cpp  math.cpp  math.h  perf_data.cpp  perf_data.h  readme.txt  render.cpp  render.h
buck_wood.dir/Debug/: buck_wood.exe.recipe
data/levels/: level_001.bak.json  level_001.json  level_002.json  level_003.json  level_004.json  test_level.json
install_package/: MicrosoftGame.config
source/: CMakeLists.txt  asteroid_container.cpp  asteroid_container.h  asteroid_generator.cpp  asteroid_generator.h  audio_data.h  audio_events.h  audio_player.h  camera_sequence.cpp  camera_sequence.h  cell_generator.cpp  cell_generator.h  common_menu_controller.cpp  common_menu_controller.h  config.txt  control_state.cpp  control_state.h  d2d_app.cpp  d2d_app.h  d2d_brushes.cpp  d2d_brushes.h  d2d_frame.cpp  d2d_frame.h  data_files.cpp  data_files.h  demo_level.cpp  demo_level.h  diagnostics.cpp  diagnostics.h  drag_drop.cpp  drag_drop.h  dwrite_text_formats.cpp  dwrite_text_formats.h  effects_volume_slider.h  game_clock.h  game_data.cpp  game_data.h  game_events.h  game_level.cpp  game_level.h  (+149 more)
source/backup/: asteroid_container.cpp  asteroid_container.h  bullet_renderer.h  cell_collision_tests.h.bak  create_new_objects_visitor.h  default_geometry_selector.h  default_object_visitors.h  direct_sound.cpp  direct_sound.h  directional_body_transform.h  duct_fan.h  dynamic_geometry.cpp  dynamic_object.h  dynamic_object_functions.h  explosion_particle.h  game_level_data.cpp  game_scale.h  game_velocity.h  game_world_data_translator.h  geometry_collision_unary.h  geometry_containment_results.h  geometry_containment_runner.h  level_asteroid.cpp  level_asteroid.h  level_collision_handler.cpp  level_collision_handler.h  level_containment_handler.h  level_data_translator.h  level_data_types.h  level_geometry_scale.h  level_position.h  moving_body.h  particle_collision_results.h  particle_containment_results.h  path_geometry.cpp  player_missile.h  player_shields.h.bak  primary_sound_buffer.h  show_level_play_scene.h  solid_object.h  (+8 more)
source/collisions/: CMakeLists.txt  cell_collision_tests.h  collision_object.h  collision_type.h  default_object_geometry.h  default_object_geometry_collection.cpp  default_object_geometry_collection.h  geometry_collision.cpp  geometry_collision.h  geometry_collision_binary.h  geometry_collision_runner.cpp  geometry_collision_runner.h  geometry_collision_unary.h  geometry_containment.cpp  geometry_containment.h  particle_containment.h  range_comparision_runner.h
source/framework/: CMakeLists.txt  active_object.h  active_object_container.cpp  active_object_container.h  area_grid.h  audio_output.cpp  audio_output.h  base_scene.h  basic_data_types.h  clock_frequency.cpp  clock_frequency.h  collision_data.h  collisions.cpp  collisions.h  color_scale.cpp  color_scale.h  color_scale_brushes.cpp  color_scale_brushes.h  com_logger.h  com_singleton.h  command_line.cpp  command_line.h  config_file.cpp  config_file.h  control_state.cpp  control_state.h  control_state_reader.h.BAK  custom_allocator.h  custom_allocator_state.h  d2d_app.cpp  d2d_app.h  d2d_factory.cpp  d2d_factory.h  d2d_frame.cpp  d2d_frame.h  data_files.cpp  data_files.h  diagnostics.cpp  diagnostics.h  direct2d_functions.cpp  (+133 more)
source/geometry/: CMakeLists.txt  image_data.h  level_geometries.cpp  (+8 more)
(+509 files in other folders)
